# GIOW-release

./: .gitignore  CMakeLists.txt  readme.md
data/: GNSS_data.txt  odometer_speed.txt  wheel_angle.txt
result/mode1/: mode1.err
result/mode2/: mode2.err
result/mode3/: mode3.err
result/mode4/: mode4.err
src/: lc.h  lcdefine.h  main.cpp  vel_meas.cpp  vel_meas.h
